src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Competitive_Impact_Weight__c</fullName>
        <formula>IF(ISPICKVAL(Competitive_Impact__c, &quot;No&quot;),0, 
IF(ISPICKVAL(Competitive_Impact__c, &quot;Questionable&quot;), 0.25, 
IF(ISPICKVAL(Competitive_Impact__c, &quot;Partly&quot;), 0.5,
IF(ISPICKVAL(Competitive_Impact__c, &quot;Mainly&quot;), 0.75, 
IF(ISPICKVAL(Competitive_Impact__c, &quot;Fully&quot;), 1, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Impact Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitive_Impact__c</fullName>
        <label>Competitive Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Questionable</fullName>
                </value>
                <value>
                    <fullName>Partly</fullName>
                </value>
                <value>
                    <fullName>Mainly</fullName>
                </value>
                <value>
                    <fullName>Fully</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>IF(ISPICKVAL(Customer_s_Ability_To_Award_The_Business__c, &quot;No&quot;),0, 
IF(ISPICKVAL(Customer_s_Ability_To_Award_The_Business__c, &quot;Questionable&quot;), 0.25, 
IF(ISPICKVAL(Customer_s_Ability_To_Award_The_Business__c, &quot;Partly&quot;), 0.5,
IF(ISPICKVAL(Customer_s_Ability_To_Award_The_Business__c, &quot;Mainly&quot;), 0.75, 
IF(ISPICKVAL(Customer_s_Ability_To_Award_The_Business__c, &quot;Fully&quot;), 1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer&apos;s Ability Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_s_Ability_To_Award_The_Business__c</fullName>
        <description>This field would provide the options for the users to choose.</description>
        <label>Customer`s Ability To Award The Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Probability_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>675: Questionnaire Field Updates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Competitive_Impact__c</fullName>
        <defaultValue>&quot;We have a competitive advantage. We understand Nokia`s existing reputation with the customer vs. our competitors. Nokia is an incumbent and not a newcomer to the customer. We have strong experience in the country.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Description Competitive Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Customer_Ability__c</fullName>
        <defaultValue>&quot;We know the (assumed) budget and the drivers for the underlying TCO model. This is part of the customer`s stated business strategy/network plan and not an information gathering exercise. Our commercial offer (pricing and terms) is in line with customer`s expectations for this stage of the offer. The customer isn’t requesting unusual terms or conditions which may be difficult to meet. We have strong relationships with the customer decision makers.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Description Customer Ability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Nokia_Ability__c</fullName>
        <defaultValue>&quot;We understand what the Customer Pain Point(s) are. We know the customer`s business case and how to align with it. Nokia bid team has all necessary competences and the needed knowledge base.&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Description Nokia Ability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nokia_s_Ability_To_Win__c</fullName>
        <description>This field will provide users option to choose for Questionnaire.</description>
        <label>Nokia`s Ability To Win</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Probability_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nokia_s_Ability_Weight__c</fullName>
        <formula>IF(ISPICKVAL( Nokia_s_Ability_To_Win__c , &quot;No&quot;),0, 
IF(ISPICKVAL( Nokia_s_Ability_To_Win__c , &quot;Questionable&quot;), 0.25, 
IF(ISPICKVAL( Nokia_s_Ability_To_Win__c , &quot;Partly&quot;), 0.5,
IF(ISPICKVAL( Nokia_s_Ability_To_Win__c , &quot;Mainly&quot;), 0.75, 
IF(ISPICKVAL( Nokia_s_Ability_To_Win__c , &quot;Fully&quot;), 1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nokia&apos;s Ability Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Questionaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Questionnaire Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <description>Calculating Win Probability based on formula</description>
        <formula>(Customer__c * 0.50 + Nokia_s_Ability_Weight__c * 0.30 + Competitive_Impact_Weight__c  * 0.20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculating Win Probability based on formula</inlineHelpText>
        <label>Win Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Win Probability Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Probability Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Freeze_Date_Completed</fullName>
        <active>false</active>
        <description>675: Questionnaire Field Updates</description>
        <errorConditionFormula>AND ( 
OR( 
ISPICKVAL( Opportunity__r.StageName , &quot;Develop Opportunity&quot;),
ISPICKVAL( Opportunity__r.StageName , &quot;Create Offer (Bid)&quot;),
ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;), 
ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) 
), 
ISCHANGED(  Date_Completed__c  ) 
)</errorConditionFormula>
        <errorMessage>Date Completed is fixed and cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Freeze_Questionnaire_Label</fullName>
        <active>true</active>
        <description>675: Questionnaire Field Updates</description>
        <errorConditionFormula>AND ( 
OR( 
ISPICKVAL( Opportunity__r.StageName , &quot;Develop Opportunity&quot;),
ISPICKVAL( Opportunity__r.StageName , &quot;Create Offer (Bid)&quot;),
ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;), 
ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) 
), 
ISCHANGED(  Questionnaire_Label__c  ) 
)</errorConditionFormula>
        <errorMessage>Questionnaire Label is fixed and cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>